# lazy-import-hack

./: README.md  pyproject.toml
src/lazy/: __init__.py
