[project]
name = "lazy-import-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tamir Bahar"}
]
requires-python = ">=3.10"
dependencies = [
    "wrapt>=2.0.0",
]


[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "lazy"
